--- a/shard.yml
+++ b/shard.yml
@@ -10,7 +10,7 @@ dependencies:
     branch: master
   clear:
     github: anykeyh/clear
-    branch: v0.9
+    branch: master
   slang:
     github: jeromegn/slang
     branch: master
@@ -22,6 +22,6 @@ targets:
     main: src/db_cli.cr
 
 
-crystal: 0.35.1
+crystal: ">= 0.35.1"
 
 license: MIT
