--- a/shard.yml
+++ b/shard.yml
@@ -7,7 +7,6 @@ authors:
 dependencies:
   kemal:
     github: kemalcr/kemal
-    branch: master
   clear:
     # github: anykeyh/clear
     # branch: master
@@ -18,6 +17,8 @@ dependencies:
   slang:
     github: jeromegn/slang
     branch: master
+  kemal-kilt:
+    github: crystal-garage/kemal-kilt
 
 targets:
   app:
